--- a/streamlit_app/requirements.txt
+++ b/streamlit_app/requirements.txt
@@ -1,5 +1,8 @@
 # streamlit_app/requirements.txt
-streamlit>=1.30.0
-httpx>=0.23.0
-python-dotenv>=1.0.0
-pillow>=10.0.0 
+streamlit==1.35.0
+httpx==0.27.0
+python-dotenv==1.0.1
+pydantic==2.6.3
+PyPDF2==3.0.1
+docx2txt==0.8
+uuid==1.30 
